<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--GLOBAL ARRAYS ARE HERE-->
    <string-array name="arrActionSpeech">
        <item>like</item>
        <item>really like</item>
        <item>yes</item>
        <item>really yes</item>
        <item>more</item>
        <item>really more</item>
        <item>don’t like</item>
        <item>really don’t like</item>
        <item>no</item>
        <item>really no</item>
        <item>less</item>
        <item>really less</item>
    </string-array>
    <string-array name="arrNavigationSpeech">
        <item>Home</item>
        <item>back</item>
        <item>keyboard</item>
    </string-array>


<string-array name="exp">
    <item>@drawable/like</item>
    <item>@drawable/yes</item>
    <item>@drawable/more</item>
    <item>@drawable/dontlike</item>
    <item>@drawable/no</item>
    <item>@drawable/less</item>
</string-array>
<string-array name="nav">
    <item>@drawable/home</item>
    <item>@drawable/back</item>
    <item>@drawable/keyboard</item>
</string-array>
    <string-array name="add_photo_option" >
        <item>@drawable/ic_photo_camera</item>
        <item>@drawable/ic_jellow_library</item>
    </string-array>
</resources>